Fixed whitespace error + word break for task

--- a/src/styles/teamPage/TaskCard.scss
+++ b/src/styles/teamPage/TaskCard.scss
@@ -27,6 +27,7 @@
     margin-bottom: 10px;
     h1 {
         border-bottom: 1px solid lightgrey;
+        word-break: break-word;
     }
     p {
         display: inline;
